--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -70,124 +70,117 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-    const firebaseConfig = {
-        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-        authDomain: "hannahenglishcourse.firebaseapp.com",
-        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
-        projectId: "hannahenglishcourse",
-        storageBucket: "hannahenglishcourse.appspot.com",
-        messagingSenderId: "449818788486",
-        appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
-    };
-    firebase.initializeApp(firebaseConfig);
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
+        };
+        firebase.initializeApp(firebaseConfig);
 
-    // Elementos DOM
-    const messageElement = document.getElementById("message");
-    const robotImg = document.getElementById("robot-img");
-    const speakButton = document.getElementById("speak-button");
-    const backButton = document.getElementById("back-button");
+        // Elementos DOM
+        const messageElement = document.getElementById("message");
+        const robotImg = document.getElementById("robot-img");
+        const speakButton = document.getElementById("speak-button");
+        const backButton = document.getElementById("back-button");
 
-    const ROBOT_GIF = "../../imagens/robo1.gif";
+      const ROBOT_GIF = "../../imagens/robo1.gif";
     const ROBOT_STATIC = "../../imagens/robo1_static.png";
     const ROBOT_ALTERNATE = "../../imagens/robo2.gif";
 
-    let recognition;
-    let isSpeaking = false; // Controla se o robô está ativo (falando ou reconhecendo voz)
-    let staticTime = 0; // Contador para medir o tempo de inatividade
-    let alternateTimeout; // Timeout para exibir o robo2.gif
-    let staticInterval; // Intervalo para monitorar a inatividade
-    let userId = null;
-    let chatHistory = [];
+        let recognition;
+        let isSpeaking = false;
+        let staticTime = 0;
+        let alternateTimeout;
+        let staticInterval; // Intervalo para monitorar a inatividade
+        let userId = null;
+        let chatHistory = [];
 
-    // Botão de voltar
-    backButton.addEventListener("click", () => window.history.back());
+        // Botão de voltar
+        backButton.addEventListener("click", () => window.history.back());
 
-    // Inicia o monitoramento de inatividade
-    function startStaticImageTimer() {
-        clearInterval(staticInterval); // Garante que apenas um intervalo está ativo
+        // Alternar imagem após 20 segundos de inatividade
+        function startStaticImageTimer() {
+        clearInterval(staticInterval); // Garante que não há múltiplos intervalos
         staticInterval = setInterval(() => {
             // Verifica se o robô está na imagem estática e não está falando/reconhecendo
             if (!isSpeaking && robotImg.src.includes("robo1_static.png")) {
-                staticTime++; // Incrementa o contador de inatividade
+                staticTime++; // Incrementa o tempo de inatividade
                 console.log(`Tempo de inatividade: ${staticTime} segundos`);
 
                 if (staticTime === 20) {
-                    console.log("Exibindo robo2.gif após 20 segundos de inatividade.");
-                    robotImg.src = ROBOT_ALTERNATE; // Exibe o robo2.gif
+                    // Após 20 segundos de inatividade, exibe o robo2.gif
+                    console.log("Exibindo robo2.gif por 15 segundos.");
+                    robotImg.src = ROBOT_ALTERNATE;
+
                     alternateTimeout = setTimeout(() => {
                         console.log("Voltando para robo1_static.png após exibir robo2.gif.");
-                        resetStaticTimer(); // Volta para a imagem estática após 15 segundos
-                    }, 15000); // Exibe o robo2.gif por 15 segundos
+                        resetStaticTimer(); // Volta para imagem estática após 15 segundos
+                    }, 15000);
                 }
             } else {
-                staticTime = 0; // Reseta o contador de inatividade se o robô não estiver na imagem estática
+                staticTime = 0; // Reseta o contador se o robô estiver ativo
             }
         }, 1000); // Verifica a cada segundo
     }
 
-    // Reinicia o temporizador de inatividade
-    function resetStaticTimer() {
-        staticTime = 0; // Zera o contador de inatividade
-        clearTimeout(alternateTimeout); // Limpa qualquer timeout ativo
+  function resetStaticTimer() {
+        staticTime = 0; // Zera o tempo de inatividade
+        clearTimeout(alternateTimeout); // Limpa o timeout do robo2.gif
         robotImg.src = ROBOT_STATIC; // Garante que a imagem volta para estática
     }
 
-    // Controle centralizado para imagens do robô
-    function setRobotImage(imageSrc) {
-        if (robotImg.src !== imageSrc) {
-            robotImg.src = imageSrc; // Atualiza a imagem do robô
+       let hasWarnedUserAboutLang = false; // Variável para evitar mensagens repetidas
+let voicesLoaded = false; // Variável para controlar se as vozes foram carregadas
 
-            // Reinicia o temporizador se o robô estiver ativo
-            if (imageSrc === ROBOT_GIF) {
-                resetStaticTimer(); // Zera o contador de inatividade
-            }
-        }
+// Evento para carregar as vozes disponíveis
+function loadVoices() {
+    const synth = window.speechSynthesis;
+
+    if (synth.onvoiceschanged !== undefined) {
+        synth.onvoiceschanged = () => {
+            voicesLoaded = true; // Marca como carregado quando as vozes estiverem disponíveis
+            console.log("Vozes carregadas:", synth.getVoices());
+        };
+    } else {
+        voicesLoaded = true; // Assume que as vozes já estão carregadas em navegadores sem suporte ao evento
     }
+}
 
-    let hasWarnedUserAboutLang = false; // Variável para evitar mensagens repetidas
-    let voicesLoaded = false; // Variável para controlar se as vozes foram carregadas
+function getAvailableVoice(lang) {
+    const voices = window.speechSynthesis.getVoices();
+    return voices.find(voice => voice.lang === lang) || voices[0]; // Retorna a voz desejada ou a primeira disponível
+}
 
-    // Evento para carregar as vozes disponíveis
-    function loadVoices() {
+// Fala com o robô (síntese de voz)
+ function speak(text, rate = 0.8, lang = "en-US") {
         const synth = window.speechSynthesis;
-
-        if (synth.onvoiceschanged !== undefined) {
-            synth.onvoiceschanged = () => {
-                voicesLoaded = true; // Marca como carregado quando as vozes estiverem disponíveis
-                console.log("Vozes carregadas:", synth.getVoices());
-            };
-        } else {
-            voicesLoaded = true; // Assume que as vozes já estão carregadas em navegadores sem suporte ao evento
-        }
-    }
-
-    function getAvailableVoice(lang) {
-        const voices = window.speechSynthesis.getVoices();
-        return voices.find(voice => voice.lang === lang) || voices[0]; // Retorna a voz desejada ou a primeira disponível
-    }
-
-    // Fala com o robô (síntese de voz)
-    function speak(text, rate = 0.8, lang = "en-US") {
-        if (!voicesLoaded) {
-            console.warn("Vozes ainda não carregadas. Tentando novamente.");
-            window.speechSynthesis.onvoiceschanged = () => speak(text, rate, lang);
-            return;
-        }
-
-        const synth = window.speechSynthesis;
-        const availableVoice = getAvailableVoice(lang);
-
-        if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
-            alert(`The English (US) language pack is not installed or available on your device. Defaulting to ${availableVoice.lang}.`);
-            hasWarnedUserAboutLang = true;
-        }
-
         const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = availableVoice.lang;
-        utterance.voice = availableVoice;
+        utterance.lang = lang;
         utterance.rate = rate;
+    if (!voicesLoaded) {
+        console.warn("Vozes ainda não carregadas. Tentando novamente.");
+        window.speechSynthesis.onvoiceschanged = () => speak(text, rate, lang);
+        return;
+    }
 
-        utterance.onstart = () => {
+    const synth = window.speechSynthesis;
+    const availableVoice = getAvailableVoice(lang);
+
+    if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
+        alert(`The English (US) language pack is not installed or available on your device. Defaulting to ${availableVoice.lang}.`);
+        hasWarnedUserAboutLang = true;
+    }
+
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = availableVoice.lang;
+    utterance.voice = availableVoice;
+    utterance.rate = rate;
+
+    utterance.onstart = () => {
             console.log("Iniciando a fala do robô.");
             isSpeaking = true; // Marca o robô como ativo
             setRobotImage(ROBOT_GIF); // Troca para robo1.gif
@@ -198,16 +191,31 @@
         utterance.onend = () => {
             console.log("Fala do robô finalizada.");
             isSpeaking = false; // Marca o robô como inativo
-            setRobotImage(ROBOT_STATIC); // Volta para a imagem estática
+            setRobotImage(ROBOT_STATIC); // Volta para imagem estática
             speakButton.disabled = false;
             speakButton.innerText = "Press to Speak";
         };
 
-        synth.speak(utterance);
+    synth.speak(utterance);
+}
+
+// Chamando o evento para carregar vozes
+loadVoices();
+
+// Configura a troca de imagens baseada na atividade do robô
+    function setRobotImage(imageSrc) {
+        if (robotImg.src !== imageSrc) {
+            robotImg.src = imageSrc; // Atualiza a imagem do robô
+
+            // Reinicia o timer se o robô estiver ativo
+            if (imageSrc === ROBOT_GIF) {
+                resetStaticTimer(); // Zera o contador de inatividade
+            }
+        }
     }
 
-    // Configura o reconhecimento de voz
-    function setupSpeechRecognition() {
+      // Reconhecimento de voz
+ function setupSpeechRecognition() {
         if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
             alert("Speech recognition is not supported in this browser.");
             speakButton.disabled = true;
@@ -228,7 +236,7 @@
         recognition.onend = () => {
             console.log("Reconhecimento de voz finalizado.");
             isSpeaking = false; // Marca o robô como inativo
-            setRobotImage(ROBOT_STATIC); // Volta para a imagem estática
+            setRobotImage(ROBOT_STATIC); // Volta para imagem estática
             speakButton.classList.remove("listening");
             speakButton.innerText = "Press to Speak";
         };
@@ -239,7 +247,16 @@
             messageElement.style.visibility = "visible";
             messageElement.innerText = `You said: "${userSpeech}"`;
 
-            try {
+        // Exibe o texto capturado da fala do usuário no elemento de mensagem
+        messageElement.style.visibility = "visible";
+        messageElement.innerText = `You said: "${userSpeech}"`;
+
+        if (!userId) {
+            alert("User ID is missing. Please log in again.");
+            return;
+        }
+
+     try {
                 const response = await fetch('/api/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -259,11 +276,66 @@
         };
     }
 
-    // Configuração inicial
-    window.onload = () => {
-        setupSpeechRecognition(); // Configura o reconhecimento de voz
-        startStaticImageTimer(); // Inicia o timer de inatividade
-    };
-</script>
+async function initializeConversation() {
+    firebase.auth().onAuthStateChanged(async (user) => {
+        if (user) {
+            userId = user.uid;
+            console.log("User authenticated. User ID:", userId);
+
+            const urlParams = new URLSearchParams(window.location.search);
+            const level = urlParams.get('level') || 'Level1';
+            const unit = urlParams.get('unit') || 'Unit1';
+
+            try {
+                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                if (!response.ok) throw new Error("Failed to initialize conversation.");
+
+                const data = await response.json();
+                console.log("Server Response:", data);
+
+                chatHistory = data.chatHistory || [];
+                messageElement.innerText = data.response;
+
+                messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
+
+                if (!speakButton.hasAttribute('data-initialized')) {
+                    speakButton.setAttribute('data-initialized', 'true');
+
+                    speakButton.addEventListener("click", () => {
+                        if (speakButton.innerText === "Press to Start") {
+                            messageElement.style.visibility = "visible";
+                            speak(data.response); // Fala a mensagem inicial
+                            speakButton.innerText = "Press to Speak";
+                        } else {
+                            recognition.start();
+                        }
+                    });
+                }
+            } catch (error) {
+               console.error("Error initializing conversation:", error);
+               messageElement.innerText = "An unexpected error occurred. Try again later.";
+               speakButton.disabled = true;
+                messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
+                messageElement.style.visibility = "visible";
+            }
+        } else {
+            console.warn("User is not logged in.");
+            messageElement.innerText = "Please log in to start the conversation.";
+            messageElement.style.visibility = "visible";
+        }
+    });
+}
+
+// Configuração inicial quando a página carrega
+document.addEventListener("visibilitychange", () => {
+    if (document.hidden) window.speechSynthesis.cancel(); // Cancela a fala se a aba for minimizada
+});
+
+window.onload = () => {
+    setupSpeechRecognition(); // Configura o reconhecimento de voz
+    initializeConversation(); // Inicializa a conversa
+    startStaticImageTimer(); // Inicia o timer de inatividade para troca de imagem
+};
+    </script>
 </body>
 </html>                                                     
