--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -156,7 +156,7 @@ function getAvailableVoice(lang) {
 
 // Fala com o robô (síntese de voz)
  function speak(text, rate = 0.8, lang = "en-US") {        
-        const utterance = new SpeechSynthesisUtterance(text);
+        let utterance = new SpeechSynthesisUtterance(text);
         utterance.lang = lang;
         utterance.rate = rate;
     if (!voicesLoaded) {
