--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -155,46 +155,46 @@ function getAvailableVoice(lang) {
 }
 
 // Fala com o robô (síntese de voz)
- function speak(text, rate = 0.8, lang = "en-US") {        
-        let utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = lang;
-        utterance.rate = rate;
+function speak(text, rate = 0.8, lang = "en-US") {
+    // Garantir que a variável synth seja usada globalmente
+    const synth = window.speechSynthesis;
+
     if (!voicesLoaded) {
         console.warn("Vozes ainda não carregadas. Tentando novamente.");
-        window.speechSynthesis.onvoiceschanged = () => speak(text, rate, lang);
+        synth.onvoiceschanged = () => speak(text, rate, lang);
         return;
     }
 
-    const synth = window.speechSynthesis;
-    const availableVoice = getAvailableVoice(lang);
+    const availableVoice = getAvailableVoice(lang); // Obter a voz disponível
 
     if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
         alert(`The English (US) language pack is not installed or available on your device. Defaulting to ${availableVoice.lang}.`);
         hasWarnedUserAboutLang = true;
     }
 
-    const utterance = new SpeechSynthesisUtterance(text);
+    // Criação do utterance sem duplicar declarações
+    let utterance = new SpeechSynthesisUtterance(text);
     utterance.lang = availableVoice.lang;
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
     utterance.onstart = () => {
-            console.log("Iniciando a fala do robô.");
-            isSpeaking = true; // Marca o robô como ativo
-            setRobotImage(ROBOT_GIF); // Troca para robo1.gif
-            speakButton.disabled = true;
-            speakButton.innerText = "Robot is speaking...";
-        };
+        console.log("Iniciando a fala do robô.");
+        isSpeaking = true; // Marca o robô como ativo
+        setRobotImage(ROBOT_GIF); // Troca para robo1.gif
+        speakButton.disabled = true;
+        speakButton.innerText = "Robot is speaking...";
+    };
 
-        utterance.onend = () => {
-            console.log("Fala do robô finalizada.");
-            isSpeaking = false; // Marca o robô como inativo
-            setRobotImage(ROBOT_STATIC); // Volta para imagem estática
-            speakButton.disabled = false;
-            speakButton.innerText = "Press to Speak";
-        };
+    utterance.onend = () => {
+        console.log("Fala do robô finalizada.");
+        isSpeaking = false; // Marca o robô como inativo
+        setRobotImage(ROBOT_STATIC); // Volta para imagem estática
+        speakButton.disabled = false;
+        speakButton.innerText = "Press to Speak";
+    };
 
-    synth.speak(utterance);
+    synth.speak(utterance); // Faz o robô falar
 }
 
 // Chamando o evento para carregar vozes
