--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -145,6 +145,7 @@ function getAvailableVoice(lang) {
     return voices.find(voice => voice.lang === lang) || voices[0]; // Retorna a voz desejada ou a primeira disponível
 }
 
+// Função para fala do robô
 function speak(text, rate = 0.8, lang = "en-US") {
     if (!voicesLoaded) {
         console.warn("Vozes ainda não carregadas. Tentando novamente.");
@@ -155,37 +156,35 @@ function speak(text, rate = 0.8, lang = "en-US") {
     const synth = window.speechSynthesis;
     const availableVoice = getAvailableVoice(lang);
 
-    // Verifica se a voz `en-US` está disponível
     if (availableVoice.lang !== lang && !hasWarnedUserAboutLang) {
         alert(
             `The English (US) language pack is not installed or available on your device. Please install it for the best experience. Defaulting to ${availableVoice.lang}.`
         );
-        hasWarnedUserAboutLang = true; // Garante que a mensagem aparece apenas uma vez
+        hasWarnedUserAboutLang = true;
     }
 
     const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = availableVoice.lang; // Usa o idioma encontrado
+    utterance.lang = availableVoice.lang;
     utterance.voice = availableVoice;
     utterance.rate = rate;
 
     utterance.onstart = () => {
-        console.log(`Speaking with voice: ${availableVoice.name} (${availableVoice.lang})`);
-        speakButton.disabled = true;
-        speakButton.innerText = "Robot is speaking...";
+        isSpeaking = true; // Marca que está falando
+        resetStaticTimer(); // Reseta o timer de inatividade
+        robotImg.src = ROBOT_GIF; // Troca para GIF ativo
+        console.log("Robot started speaking...");
     };
 
     utterance.onend = () => {
-        speakButton.disabled = false;
-        speakButton.innerText = "Press to Speak";
+        isSpeaking = false; // Finaliza o estado de fala
+        robotImg.src = ROBOT_STATIC; // Retorna à imagem estática
+        console.log("Robot finished speaking...");
     };
 
     synth.speak(utterance);
 }
 
-// Chamando o evento para carregar vozes
-loadVoices();
-
-        // Reconhecimento de voz
+// Configuração do reconhecimento de voz
 function setupSpeechRecognition() {
     if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
         alert("Speech recognition is not supported in this browser.");
@@ -197,16 +196,16 @@ function setupSpeechRecognition() {
     recognition.lang = "en-US";
 
     recognition.onstart = () => {
-        isSpeaking = true; // Marca que o robô está ativo
+        isSpeaking = true; // Marca que está reconhecendo
         resetStaticTimer(); // Reseta o timer de inatividade
-        robotImg.src = ROBOT_GIF; // Troca para o GIF ativo
+        robotImg.src = ROBOT_GIF; // Troca para GIF ativo
         speakButton.classList.add("listening");
         speakButton.innerText = "Listening...";
         console.log("Recognition started...");
     };
 
     recognition.onend = () => {
-        isSpeaking = false; // Marca que o robô não está mais ativo
+        isSpeaking = false; // Finaliza o estado de reconhecimento
         robotImg.src = ROBOT_STATIC; // Retorna à imagem estática
         speakButton.classList.remove("listening");
         speakButton.innerText = "Press to Speak";
@@ -217,9 +216,9 @@ function setupSpeechRecognition() {
         const userSpeech = event.results[0][0].transcript;
         console.log("User speech:", userSpeech);
 
-        // Exibe o texto capturado da fala do usuário no elemento de mensagem
+        // Exibe o texto capturado
         messageElement.style.visibility = "visible";
-        messageElement.innerText = `You said: "${userSpeech}"`; // Exibe a fala capturada
+        messageElement.innerText = `You said: "${userSpeech}"`;
 
         if (!userId) {
             alert("User ID is missing. Please log in again.");
